--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
     "astro": "^5.9.2",
+    "chinese-numbering": "^1.0.0",
     "sass": "^1.89.2"
   }
 }
